ex6/testdata/typechecker/ok/Minus.java
class BinopTest {
	public static void main(String[] a){
            int i;
            i = - 1;
	}
}

