ex6/testdata/typechecker/error/DuplicateParam.java
class Wuff {
    public static void main(String[] args) {
    }
}

class Blub {
    int m(int x, int y, int x) {
        return 0;
    }
}